--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -51,23 +51,42 @@
                                 </div>
                             </div>
                             <ul v-if="activeSubIndex===index" :class="activeSubIndex===index?'display':''" class="subNav">
-                                <li v-for="(item,firstIndex) in objectNavList" v-if="item.parentId==0">
+                                <li v-for="(firstItem,firstIndex) in objectNavList" v-if="firstItem.parentId==0">
                                     <div class="item">
                                         <i></i>
-                                        <p @click="showThree(firstIndex)" :class="item.isLast==0?'':'paddingLeft'"><em :class="activeThreeIndex===firstIndex?'checked':''"></em>{{item.name}}</p>
+                                        <p @click="showThree(firstIndex)" :class="firstItem.isLast==0?'':'paddingLeft'"><em :class="activeThreeIndex===firstIndex?'checked':''"></em>{{firstItem.name}}</p>
                                     </div>
                                     <ul v-if="activeThreeIndex===firstIndex" :class="activeThreeIndex===firstIndex?'display':''" class="threeNav">
-                                        <li v-for="(secItem,secIndex) in objectNavList" v-if="item.id==secItem.parentId">
+                                        <li v-for="(secItem,secIndex) in objectNavList" v-if="firstItem.id==secItem.parentId">
                                             <div class="item">
                                                 <i></i>
-                                                <a v-if="secItem.name=='信息安全'" :href="'infoSecurity.html?id='+secItem.id"><em></em>{{secItem.name}}</a>
-                                                <p v-else @click="showFour(secIndex,secItem.isLast)" :class="secItem.isLast==0?'':'paddingLeft'"><em v-if="secItem.isLast==0" :class="activeFourIndex===secIndex?'checked':''"></em>{{secItem.name}}<img v-if="secItem.type!=0" onclick="$('.tcHide').show()" src="images/template/icon-change.png"/></p>
+                                                <a v-if="secItem.name=='信息安全'" :href="'infoSecurity.html?id='+item.id"><em></em>{{secItem.name}}</a>
+                                                <p v-else-if="secItem.type==0" @click="showFour(secIndex,secItem.isLast)" :class="secItem.isLast==0?'':'paddingLeft'">
+                                                    <em v-if="secItem.isLast==0" :class="activeFourIndex===secIndex?'checked':''"></em>
+                                                    {{secItem.name}}
+                                                </p>
+                                                <p v-else :class="item.deviceList[secItem.type]&&item.deviceList[secItem.type].length>0?'':'paddingLeft'">
+                                                    <span @click="showFour(secIndex,secItem.isLast,secItem.type,item.deviceList[secItem.type])">
+                                                        <em v-if="item.deviceList[secItem.type]&&item.deviceList[secItem.type].length>0" :class="activeFourIndex===secIndex?'checked':''"></em>
+                                                        {{secItem.name}}
+                                                    </span>
+                                                    <img @click="deviceInfo(1,secItem.type,index,item.id)" src="images/template/icon-change.png"/>
+                                                </p>
                                             </div>
-                                            <ul v-if="activeFourIndex===secIndex" :class="activeFourIndex===secIndex?'display':''">
-                                                <li v-for="(thirdItem,thirdIndex) in objectNavList" v-if="secItem.id==thirdItem.parentId">
-                                                    <div class="item"><i></i><p class="paddingLeft">{{thirdItem.name}}<img src="images/template/icon-change.png"/></p></div>
-                                                </li>
-                                            </ul>
+                                            <div v-if="secItem.type==0">
+                                                <ul v-if="activeFourIndex===secIndex" :class="activeFourIndex===secIndex?'display':''">
+                                                    <li v-for="(thirdItem,thirdIndex) in objectNavList" v-if="secItem.id==thirdItem.parentId">
+                                                        <div class="item"><i></i><p class="paddingLeft">{{thirdItem.name}}<img src="images/template/icon-change.png"/></p></div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div v-else>
+                                                <ul v-if="activeFourIndex===secIndex" :class="activeFourIndex===secIndex?'display':''">
+                                                    <li v-for="(deviceItem,deviceIndex) in item.deviceList[secItem.type]">
+                                                        <div class="item"><i></i><p class="paddingLeft">{{deviceItem.displayName}}</p></div>
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </li>
                                     </ul>
                                 </li>
@@ -75,31 +94,6 @@
                         </li>
                     </ul>
                 </div>
-                <!--<table>
-                    <thead>
-                    <tr>
-                        <th>业务系统名称</th>
-                        <th>上次考评对象</th>
-                        <th>上次考评结果</th>
-                        <th>考评结果接收邮箱</th>
-                        <th>操作</th>
-                    </tr>
-                    </thead>
-                    <tbody id="table">
-                    <tr v-for="(item,index) in objectList">
-                        <td><a :href="'evaluationObject1.html?parentId='+item.parentId"><img src="images/template/‭icon-open.png"/>{{item.name}}</a></td>
-                        <td>2020-02-14</td>
-                        <td class="green">达标</td>
-                        <td>{{item.email}}</td>
-                        <td>
-                            <img @click="objectInfo(1,index,item.id)" src="images/template/icon-change.png"/>
-                            <img @click="delObjectInfo(item.id,index)" src="images/template/icon-del.png"/>
-                            <span class="btn">手动考评</span>
-                            <span class="btn1">考评结果</span>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>-->
             </div>
         </div>
     </div>
@@ -151,28 +145,27 @@
         </div>
     </div>
     <!--编辑考评主体-->
-    <div class="tcHide">
-        <div class="masking" onclick="$('.tcHide').hide()"></div>
+    <div class="tcHide" v-if="isDevicePop" :class="isDevicePop?'display':''">
+        <div class="masking" @click="deviceInfo(0)"></div>
         <div class="tcCon">
-            <div class="tcTit"><span>考评主体管理</span></div>
+            <div class="tcTit"><span>考评设备</span></div>
             <div class="monitorItem">
                 <div class="item">
                     <ul>
-                        <li>业务监视器1</li>
-                        <li>业务监视器2</li>
+                        <li v-for="(item,index) in deviceList" :class="{checked:deviceIndex==index}" @click="checkLeftDevice(item.displayName,item.name,index)">{{item.displayName}}</li>
                     </ul>
                 </div>
                 <div class="itemPic">
-                    <img src="images/template/icon-right.png"/>
-                    <img src="images/template/icon-left.png"/>
+                    <img @click="addDevice" src="images/template/icon-right.png"/>
+                    <img @click="delDevice" src="images/template/icon-left.png"/>
                 </div>
                 <div class="item">
                     <ul>
-                        <li>业务监视器3</li>
+                        <li v-for="(item,index) in selectedDeviceList" :class="{checked:deviceIndex==index}" v-on:click="checkRightDevice(item.displayName,item.name,index)">{{item.displayName}}</li>
                     </ul>
                 </div>
             </div>
-
+            <div class="itemBtn"><a class="btn" @click="submitDevice">保存</a></div>
         </div>
     </div>
 </div>
