--- a/evaluationPlan.html
+++ b/evaluationPlan.html
@@ -26,7 +26,7 @@
                 <span>考评计划管理</span>
             </div>
             <div class="table">
-                <div class="btnList"><a class="btn" href="evaluationPlanDetail.html">编辑计划</a></div>
+                <div class="btnList"><a class="btn" href="evaluationPlanDetail.html?id=0">编辑计划</a></div>
                 <table>
                     <thead>
                     <tr>
@@ -38,12 +38,12 @@
                     </tr>
                     </thead>
                     <tbody id="table">
-                    <tr>
-                        <td>大数据治理应用平台</td>
-                        <td>每天9:00，每周一10:00，每月1日10:30</td>
-                        <td>2020-01-01</td>
-                        <td>2020-12-31</td>
-                        <td><a href="evaluationPlanDetail.html"><img src="images/template/icon-change.png"/></a></td>
+                    <tr v-for="item in planList" v-if="item.id>0">
+                        <td>{{item.name}}</td>
+                        <td>{{cronExpression(item.checkPlan)}}</td>
+                        <td>{{dateFormatFull(item.checkStartTime)}}</td>
+                        <td>{{dateFormatFull(item.checkEndTime)}}</td>
+                        <td><a :href="'evaluationPlanDetail.html?id='+item.id"><img src="images/template/icon-change.png"/></a></td>
                     </tr>
                     </tbody>
                 </table>
@@ -53,11 +53,5 @@
 </div>
 </body>
 <script src="js/public.js"></script>
-<script type="text/javascript">
-    $(function () {
-        var docHeight = window.innerHeight || document.documentElement.clientHeight;
-        document.getElementById("content").children[0].style.height = (docHeight - 142) + "px";
-        document.getElementById("table").style.maxHeight = (docHeight - 205) + "px"
-    });
-</script>
+<script src="js/evaluationPlan.js"></script>
 </html>
