--- a/report.html
+++ b/report.html
@@ -25,7 +25,7 @@
             <div class="listCon">
                 <div class="title"><span>考评报表管理</span></div>
                 <div class="table">
-                    <div class="btnList"><a class="btn">新建报表</a></div>
+                    <div class="btnList"><a class="btn" onclick="$('.tcHide').show()">新建报表</a></div>
                     <table>
                         <thead>
                         <tr>
